[gd_scene load_steps=15 format=3 uid="uid://dgjf5tyol4k2i"]

[ext_resource type="Script" path="res://scripts/enemies/enemy_2_2.gd" id="1_g8kp6"]
[ext_resource type="PackedScene" uid="uid://b33uobs8gcofl" path="res://scenes/bullets/enemy_2_bullet.tscn" id="2_d0w46"]
[ext_resource type="PackedScene" uid="uid://ccogpqp72dena" path="res://scenes/collectables/coin.tscn" id="3_v4bil"]
[ext_resource type="Texture2D" uid="uid://b3qw5fkcbud64" path="res://sprites/fjender/ice_crystal_enemy/ice-crystal-enemy_angreb-1.png" id="4_elp45"]
[ext_resource type="Texture2D" uid="uid://cxs8a2nwrhtki" path="res://sprites/fjender/ice_crystal_enemy/ice-crystal-enemy_angreb-2.png" id="5_hm2v3"]
[ext_resource type="Texture2D" uid="uid://btfig5rc2aw3o" path="res://sprites/fjender/ice_crystal_enemy/ice-crystal-enemy_charge-1.png" id="6_e87ah"]
[ext_resource type="Texture2D" uid="uid://lecqaohbaodf" path="res://sprites/fjender/ice_crystal_enemy/ice-crystal-enemy_charge-2.png" id="7_ca2kv"]
[ext_resource type="Texture2D" uid="uid://deqxwwye30do5" path="res://sprites/fjender/ice_crystal_enemy/ice-crystal-enemy_charge-3.png" id="8_yx1l3"]
[ext_resource type="Texture2D" uid="uid://ciyd3flus8pp7" path="res://sprites/fjender/ice_crystal_enemy/ice-crystal-enemy_charge-4.png" id="9_5vy18"]
[ext_resource type="Texture2D" uid="uid://cp1dskvx85vnj" path="res://sprites/fjender/ice_crystal_enemy/ice-crystal-enemy_idle_walk.png" id="10_fe87h"]
[ext_resource type="AudioStream" uid="uid://cucfblr21yfkr" path="res://sounds/Enemy2Sound.mp3" id="11_q1i04"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wvbt1"]
radius = 60.0
height = 164.0

[sub_resource type="SpriteFrames" id="SpriteFrames_o1pp5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_elp45")
}, {
"duration": 1.0,
"texture": ExtResource("5_hm2v3")
}],
"loop": false,
"name": &"Angreb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_e87ah")
}, {
"duration": 1.0,
"texture": ExtResource("7_ca2kv")
}, {
"duration": 1.0,
"texture": ExtResource("8_yx1l3")
}, {
"duration": 1.0,
"texture": ExtResource("9_5vy18")
}],
"loop": false,
"name": &"Charge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_fe87h")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_fe87h")
}],
"loop": false,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xfi7w"]
radius = 178.003

[node name="Enemy2_2" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_g8kp6")
alpha = 0.03
bullet_scene = ExtResource("2_d0w46")
coin_scene = ExtResource("3_v4bil")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("CapsuleShape2D_wvbt1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_o1pp5")
animation = &"Walk"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="move_Timer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="attack_Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ShootingPoint" type="Marker2D" parent="."]

[node name="View" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="View"]
shape = SubResource("CircleShape2D_xfi7w")

[node name="Enemy2Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_q1i04")
volume_db = -5.0
pitch_scale = 0.85

[connection signal="timeout" from="move_Timer" to="." method="_on_move_timer_timeout"]
[connection signal="body_entered" from="View" to="." method="_on_view_body_entered"]
[connection signal="body_exited" from="View" to="." method="_on_view_body_exited"]
